compiler/tests/fixtures/negative/error_parse1.sol
function start() -> int {
    let x: int = ;
    return 0;
}
